--- a/Evita_distributed/twitter.html
+++ b/Evita_distributed/twitter.html
@@ -64,8 +64,16 @@
                 // You can use these server side with your app's credentials to access the Twitter API.
                 var token = result.credential.accessToken;
                 var secret = result.credential.secret;
+
+
                 // The signed-in user info.
                 var user = result.user;
+
+
+                sessionStorage.setItem("AccesTokenForTwitter", result.credential.accessToken);
+                sessionStorage.setItem("SeccretKeyForTwitter", result.credential.secret);
+       
+
 
                 console.log(user);
             }).catch(function (error) {
